# edgedl

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust-analyzer.toml  taplo.toml
.github/: rust-matchers.json
.github/workflows/: ci.yml
crosscheck-proto/: Cargo.toml
crosscheck-proto/src/: lib.rs
examples/noise/: Cargo.toml  README.md  build.rs
examples/noise/.cargo/: config.toml
examples/noise/src/: main.rs
hil-test/: Cargo.toml  README.md
hil-test/.cargo/: config.toml
hil-test/src/: lib.rs  probe.rs
hil-test/src/conv11_parity/: blocked.rs  ic_tail.rs  oc_tail.rs  ohwi.rs  padding.rs  util.rs
hil-test/src/conv33_parity/: dilated.rs  ic_tail.rs  large.rs  mod.rs  noise_like.rs  noise_model_parity.rs  oc_tail.rs  ohwi.rs  padding.rs  strided.rs  util.rs
hil-test/src/conv_hwcn_parity/: aligned.rs  mod.rs  noise_like.rs  padding.rs  unaligned.rs  util.rs
macros/: Cargo.toml
macros/src/: arena_liveness.rs  args.rs  context.rs  initializers.rs  lib.rs  loader.rs  util.rs  values.rs
macros/src/ops/: conv2d.rs  linear.rs  mod.rs  pad.rs  reduce_mean.rs  relu.rs
src/: arena.rs  engine.rs  error.rs  lib.rs  mem.rs  model.rs  post.rs  rounding.rs
src/features/: mel.rs  mod.rs  tie728_mel.S
src/features/fft/: mod.rs  tables.rs  tie728_fft2r.S
src/kernels/: conv2d.rs  linear.rs  mod.rs  pad.rs  reduce_mean.rs  relu.rs
src/kernels/simd/: mod.rs
src/kernels/simd/conv2d/: common.rs  mod.rs  quant.rs  router.rs
src/kernels/simd/conv2d/isa/: mod.rs
src/kernels/simd/conv2d/isa/tie728/: hwcn_aligned.rs  hwcn_unaligned.rs  k11_aligned.rs  k11_unaligned.rs  k33_aligned.rs  k33_unaligned.rs  mod.rs  tie728_hwcn_aligned.S  tie728_hwcn_unaligned.S  tie728_k11_aligned.S  tie728_k11_unaligned.S  tie728_k33_aligned.S  tie728_k33_unaligned.S  tie728_shared_macros.S
src/trace/: inspect.rs  mod.rs
tests/: arena_liveness_planner.rs  golden_inputs.rs  model.espdl  noise.rs  noise_mel_integration.rs  noise_model.espdl  noise_model_integration.rs  noise_model_integration_crosscheck.rs
xtask/: Cargo.toml  README.md
xtask/src/: cargo.rs  changelog.rs  firmware.rs  git.rs  lib.rs  main.rs  probe.rs
xtask/src/commands/: build.rs  mod.rs  release.rs  run.rs
