[package]
name    = "hil-test"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "hil_test"

[[bin]]
name    = "noise_model_integration"
harness = false

[[bin]]
name    = "noise_mel_integration"
harness = false

[[bin]]
name    = "conv11_parity"
harness = false
path    = "src/bin/conv11_parity.rs"

[[bin]]
name    = "conv33_parity"
harness = false
path    = "src/bin/conv33_parity.rs"

[[bin]]
name    = "conv_hwcn_parity"
harness = false
path    = "src/bin/conv_hwcn_parity.rs"

[[bin]]
name    = "fft_mel_parity"
harness = false
path    = "src/bin/fft_mel_parity.rs"

[dependencies]
allocator-api2         = { version = "0.3.0", default-features = false, features = ["alloc"] }
cfg-if                 = "1.0.0"
critical-section       = "1.1.3"
defmt                  = "1.0.1"
defmt-rtt              = { version = "1.0.0", optional = true }
embassy-executor       = { version = "0.10.0", default-features = false }
embassy-futures        = "0.1"
embedded-storage       = "0.3.1"
embassy-sync           = "0.8.0"
embassy-time           = "0.5.0"
embedded-hal           = "1.0.0"
embedded-io            = "0.7.1"
embedded-io-async      = "0.7.0"
embedded-can           = "0.4.1"
embedded-hal-async     = "1.0.0"
edgedl                 = { path = "..", default-features = false, features = ["simd-s3"] }
edgedl-macros          = { path = "../macros" }
libm                   = "0.2"
microfft               = { version = "0.6", default-features = false, features = ["size-1024"] }
esp-alloc              = { version = "0.9.0", optional = true }
esp-bootloader-esp-idf = { version = "0.4.0" }
esp-hal                = { version = "1.0.0" }
esp-metadata-generated = { version = "0.3.0" }
esp-rtos               = { version = "0.2.0", optional = true }
esp-storage            = { version = "0.2.0", optional = true }
esp-sync               = { version = "0.1.1" }
esp-radio              = { version = "0.17.0", optional = true }
esp-radio-rtos-driver  = { version = "0.2.0", optional = true }
portable-atomic        = "1.11.0"
static_cell            = { version = "2.1.0" }
semihosting            = { version = "0.1", features = ["stdio", "panic-handler"] }

# Add the `embedded-test/defmt` feature for more verbose testing
embedded-test = { version = "0.7.1", default-features = false, features = [
    "embassy-010",
    "external-executor",
    "semihosting",
] }
hex-literal = "1.0.0"
nb = "1.1.0"

[build-dependencies]
esp-metadata-generated = { version = "0.3.0", features = ["build-script"] }

[features]
default  = []
unstable = ["esp-hal/unstable"]

defmt = [
    "dep:defmt-rtt",
    "esp-hal/defmt",
    "embedded-test/defmt",
    "esp-radio?/defmt",
    "esp-rtos?/defmt",
]
esp-radio = ["dep:esp-radio", "dep:esp-rtos", "dep:esp-radio-rtos-driver", "esp-rtos/esp-radio"]
trace = ["edgedl/trace"]
simd-s3 = ["edgedl/simd-s3"]

# Device support (required!):
esp32s3 = [
    "embedded-test/xtensa-semihosting",
    "esp-hal/esp32s3",
    "esp-rtos?/esp32s3",
    "esp-radio?/esp32s3",
    "esp-storage?/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-metadata-generated/esp32s3",
    "esp-alloc?/esp32s3",
]
# Async & Embassy:
embassy = ["dep:esp-rtos", "esp-rtos/embassy"]
psram   = ["esp-hal/unstable", "dep:esp-alloc"]

[patch.crates-io]
esp-hal                = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-backtrace          = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-println            = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-alloc              = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-rtos               = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-bootloader-esp-idf = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-radio              = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-storage            = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-sync               = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-metadata-generated = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }
esp-radio-rtos-driver  = { git = "https://github.com/esp-rs/esp-hal", rev = "70930f20d9f681a30ff20aced39d0bd5363126d5" }

# https://doc.rust-lang.org/cargo/reference/profiles.html#test
# Test and bench profiles inherit from dev and release respectively.
[profile.dev]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = "z"
overflow-checks  = true

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = true
incremental      = false
opt-level        = 3
lto              = false # LTO (thin or fat) miscompiles some tests on RISC-V
overflow-checks  = true

# `cargo machete` incorrectly marks it as unused.
[package.metadata.cargo-machete]
ignored = ["semihosting"]
