[package]
name        = "edgedl-macros"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
description = "Proc-macro for edgedl - parses .espdl model files at compile time"
publish     = false

[lib]
proc-macro = true

[dependencies]
proc-macro2      = "1"
quote            = "1"
syn              = { version = "2", features = ["full"] }
flatbuffers      = "24"
proc-macro-error = "1"
structmeta       = "0.3"
