[package]
name    = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
console = "0.15.10"
env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
esp-metadata = { path = "../../esp-hal/esp-metadata", features = ["clap"] }
inquire = "0.7.5"
jiff = { version = "0.2.13", default-features = false, features = ["std"] }
log = "0.4.22"
parking_lot = "0.12.3"
pretty_yaml = { version = "0.6" }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.70"
somni-expr = { version = "0.2.0" }
strum = { version = "0.27.1", features = ["derive"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.2.0"
tempfile          = "3"
